@@ -17,14 +17,24 @@ public partial class ReportCommit : System.Web.UI.Page
 			HttpPostedFile xml;
 			xml = Request.Files ["xml"];
 
+			if (Request.UserHostAddress != "130.57.169.27") {
+				Logger.Log ("ReportCommit.aspx: {0} tried to send a file, ignored.", Request.UserHostAddress);
+				return;
+			}
+
 			if (xml != null) {
 				string outdir = Configuration.GetSchedulerCommitsDirectory ();
 				string outfile = Path.Combine (outdir, string.Format ("commit-{0}.xml", DateTime.Now.ToString ("yyyy-MM-dd-HH-mm-ss")));
 
+				if (xml.ContentLength > 1024 * 100) {
+					Logger.Log ("ReportCommit.aspx: {0} tried to send oversized file (> {1} bytes.", Request.UserHostAddress, 1024 * 100);
+					return;
+				}
+
 				if (!Directory.Exists (outdir))
 					Directory.CreateDirectory (outdir);
 				
-				Logger.Log ("ReportCommit.aspx: Got 'xml' with size {0} bytes, writing to '{1}'", xml.ContentLength, outfile);
+				Logger.Log ("ReportCommit.aspx: Got 'xml' from {2} with size {0} bytes, writing to '{1}'", xml.ContentLength, outfile, Request.UserHostAddress);
 	
 				byte [] buffer = new byte [1024];
 				int read;
@@ -32,6 +42,10 @@ public partial class ReportCommit : System.Web.UI.Page
 					while (0 < (read = xml.InputStream.Read (buffer, 0, buffer.Length))) {
 						writer.Write (buffer, 0, read);
 					}
+				}
+				using (Process p = new Process ()) {
+					p.StartInfo.FileName = Path.Combine (Configuration.BUILDER_CONFIG, "updater.sh");
+					p.Start ();
 				}
 			} else {
 				Logger.Log ("ReportCommit.aspx: Didn't get a file called 'xml'");
