@@ -1,3 +1,12 @@
+2009-03-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* ViewHtmlReport.aspx.cs: Augment ViewHtmlReport to fix both
+	  images and links.
+
+	* ViewLane.aspx.cs: Comment out cwl.
+
+	* ReportCommit.aspx.cs: Add some checks here.
+
 2009-03-03  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* ChangeLog: Added.
