@@ -1,3 +1,10 @@
+2009-03-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* Updater.cs:
+	* SVNUpdater.cs:
+	* Configuration.cs: Add support for checking a directory for
+	  commit messages.
+
 2009-03-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* DBRevisionWork.cs: If a step is being executed, and a host
